test: raise meaningful coverage